# Hatrix

./: .gitignore  CMakeLists.txt  PERFORMANCE_ANALYSIS.md  PROJECT_REVIEW.md  README.md  build.bat  pyproject.toml  setup.py
Hatrix/: hadamard_matrix.hpp  hatrix_config.hpp  hatrix_containers.hpp  hatrix_exceptions.hpp  hatrix_format.hpp  hatrix_gemm.hpp  hatrix_logging.hpp  hatrix_memory.hpp  hatrix_parallel.hpp  hatrix_simd.hpp  hatrix_types.hpp
bench/: advanced_benchmark.cpp  benchmark_hadamard_gbench.cpp  cpp_bench.cpp  performance_benchmark.cpp  python_bench.py
bindings/: python_bindings.cpp
cmake/: hatrixConfig.cmake.in
doc/: mmm_phases.md
examples/: advanced_usage.cpp  basic_usage.cpp  python_advanced_usage.py  python_basic_usage.py  python_example.py  python_performance_demo.py
include/Hatrix/: CAPI.h  Export.h  Matrix.h
python/hatrix/: __init__.py  _core.py
src/: CAPI.cpp  Matrix.cpp
test/: capi_cpp_tests.cpp  matrix_cpp_tests.cpp  test_enterprise_features.cpp  test_hadamard_gtest.cpp  test_performance_gtest.cpp
test/python/: test_hatrix.py
test_python/: test_hatrix.py  test_performance.py
